Added types for pieces and implementation for moves for white and red pawns

--- a/CheckersGame/CheckersGame/CheckersGame.csproj
+++ b/CheckersGame/CheckersGame/CheckersGame.csproj
@@ -64,6 +64,7 @@
     </Compile>
     <Compile Include="Model\GameModel.cs" />
     <Compile Include="Model\PieceModel.cs" />
+    <Compile Include="Model\PieceType.cs" />
     <Compile Include="ViewModel\BaseVM.cs" />
     <Compile Include="ViewModel\GameVM.cs" />
     <Compile Include="ViewModel\LoadGameVM.cs" />
